fixed figure scaling and added boundary atrributes text

--- a/CML_Seminar_Template.bib
+++ b/CML_Seminar_Template.bib
@@ -1,3 +1,14 @@
+@article{heponiemi2014call,
+  title={On-call work and physicians’ well-being: testing the potential mediators},
+  author={Heponiemi, T and Puttonen, S and Elovainio, M},
+  journal={Occupational Medicine},
+  volume={64},
+  number={5},
+  pages={352--357},
+  year={2014},
+  publisher={Oxford University Press UK}
+}
+
 @inproceedings{Fetter2018,
   title={Towards a Better Understanding of Availability and Interruptibility with Mobile Availability Probes},
   author={Fetter, Mirko and M{\"u}ller, Anna-Lena and Vasilyev, Petr and Barth, Laura Marie and Gross, Tom},
