--- a/CML_Seminar_Template.tex
+++ b/CML_Seminar_Template.tex
@@ -21,18 +21,19 @@ Job areas with on-call service mark a very interesting example of a boundary in 
 Another study lists symptoms for mental, cognitive and behavioural effects. Table 1 shows a selection of symptoms. The kind of symptoms and their substantial prevalence among workers in on-call service shows the severity of the effects.
 
 \section{The domain of on-call service}
-
+Figure \ref{Boundary_sketch_fig} shows a rough sketch depicting a worker in the domain of on-call service, symbolised by the doctor's bag. The pressure and responsibility he experiences from his social environment is depicted by the arrows pointing towards his domain's boundary. The right side shows a different subject with a thinner boundary in comparison. The thinner boundary enables transitions to other domains more easily.
 \begin{figure}[htb]
   \begin{center}
-   \includegraphics{Boundary_sketch_small.PNG}
+   \scalebox{1}{\includegraphics{Boundary_sketch_small.PNG}}
   % \scalebox{.5}{\input{pager.jpg}}
   \end{center}
     \caption{\label{Boundary_sketch_fig}  Sketch depicting an on-call service worker in his domain and boundary. }
 \end{figure}
 
 \subsection{Effects on health}
-
-In a 2006 study in Finland \cite[]{Lindfors2006}, researchers looked deeply into on-call stress and the effects among anaesthetists. Anaesthesia is a state of temporary induced loss of awareness or sensation. An anaesthetists is a physician trained in this field of medicine. In the questionnaire, an abundance of symptoms was asked about. A selection of a few of these symptoms was collected (cf. Table ~\ref{CML_Seminar_Template_tab1}). Reports of the symptom were compared between workers being currently on-call service or the day after and those on vacation for at least two weeks. It can be seen that for the selected symptoms, the report rates for on-call service are significantly higher. This is representative for the entirety of symptoms that was evaluated in the questionnaire. The symptoms involve mental, cognitive and behavioural kinds. They type of symptoms illustrate how severe the effects of on-call service are.
+In a 2014 study by Heponiemi et al. \cite[]{heponiemi2014call}, the relations between sleeping problems, WIF (work interference with family) and distress as well as job satisfaction was researched. The study was designed carefully to distinguish between cause and correlation. Questionnaires from 20016 and 2010 among physicians in Finland were analysed. There were 1541 respondents. The study found that if the on-call work was causing high distress, WIF and sleeping problems acted as a mechanism.
+\par
+In a 2006 study in Finland \cite[]{Lindfors2006}, researchers looked deeply into on-call stress and the effects among anaesthetists. Anaesthesia is a state of temporary induced loss of awareness or sensation. An anaesthetists is a physician trained in this field of medicine. In the questionnaire, an abundance of symptoms was asked about. A selection of a few of these symptoms was collected (cf. Table ~\ref{CML_Seminar_Template_tab1}). Reports of the symptom were compared between workers being currently on-call service or the day after and those on vacation for at least two weeks. It can be seen that for the selected symptoms, the report rates for on-call service are significantly higher. This is representative for the entirety of symptoms that was evaluated in the questionnaire. The symptoms involve mental, cognitive and behavioural kinds. The type of symptoms illustrate how severe the effects of on-call service are.
 
 
 \begin{table}
@@ -57,11 +58,11 @@ In a 2006 study in Finland \cite[]{Lindfors2006}, researchers looked deeply into
 \end{table}
 
 \subsection{Boundary attributes}
-The boundary of an on-call service exhibits an interesting combination of attributes. Boundary flexibility is defined by \cite[]{Piszczek2014} as the "Capacity of the boundary to be moved temporally or physically." Consequently, for the case of on-call service, the boundary flexibility has to be considered minimal. If we assume that no other worker would take the shift instead, the boundary must not be moved temporally. It must also not be moved physically, as the proximity to patients is critical and the distances to be covered need to be as short as possible. During an emergency, a time difference in minutes 
+The boundary of an on-call service exhibits an interesting combination of attributes. Boundary flexibility is defined by \cite[]{Piszczek2014} as the "Capacity of the boundary to be moved temporally or physically." Consequently, for the case of on-call service, the boundary flexibility has to be considered minimal. If we assume that no other worker would take the shift instead, the boundary must not be moved temporally. It must also not be moved physically, as the proximity to patients is critical and the distances to be covered need to be as short as possible. During an emergency, a time difference in minutes to arrive at the emergency site and provide care for the casualties can mean saved lives. In conclusion, the capacity to either move the boundary temporally or physically is minimal because the consequences for doing so are maximal. Possible consequences include the death of one or multiple patients.
 \par
-Boundary permeability is defined by \cite[]{Hecht2009} as follows: "Reflects the extent to which an individual might be psychologically and/or behaviorally engaged in one domain, while physically located in another, or at times that are traditionally devoted to the other."
+Boundary permeability is defined by \cite[]{Hecht2009} as follows: "Reflects the extent to which an individual might be psychologically and/or behaviourally engaged in one domain, while physically located in another, or at times that are traditionally devoted to the other." We argue that permeability is high, since the feeling of responsibility an on-call worker feels is unlikely to fade away quickly after transition to the life domain, for example. The feeling of responsibility is closely connected to a feeling of guilt after mistakes were made and patients might have been injured. Furthermore, emergency sites can offer shocking scenes and images to the first responder teams. Referring back to \cite[]{Lindfors2006}, the symptoms of "Uncertainty, anxiety, phobias", "Nightmares" and "Memory disturbances" hint at such traumatic effects. All of the symptoms, in particular "Memory disturbances" are significantly increased in on-call service compared to vacation. The traumatic effects represent a psychological behaviour in one domain engagement in one domain, while physically located in another. This fits the definition by Hecht.
 \par
-Boundary thickness is defined by \cite[]{Ashforth2000} as the combination of boundary flexibility and boundary permeability. This means that the boundary thickness is debatable, since flexibility is minimal but permeability in contrast is high. When we separate both attributes by  
+Boundary thickness is defined by \cite[]{Ashforth2000} as the combination of boundary flexibility and boundary permeability. This means that the boundary thickness is debatable, since flexibility is minimal but permeability in contrast is high. When we separate both attributes by defining the physical state and the mental state respectively, we could give more weight to either one of them depending on the context in which boundary thickness is discussed. 
 
 
 
@@ -81,10 +82,10 @@ Compared to a smartphone, the design is so much simpler and more efficient that 
 % TODO scale
 \begin{figure}[htb]
   \begin{center}
-   \includegraphics{pager_small.jpg}
+   \scalebox{1.8}{\includegraphics{pager_small.jpg}}
   % \scalebox{.5}{\input{pager.jpg}}
   \end{center}
-    \caption{\label{pager_fig1} An example of a paging device.}
+    \caption{\label{pager_fig1} An example of a paging device. From https://www.visiplex.com/product/alphanumeric-pager/ (Accessed 10/7/18).}
 \end{figure}
 
 Paging technology operates in its own dedicated network. It has been proven to work during disasters, whereas the cellphone network tends to get overloaded and unreliable when many calls are being made. Paging provides encryption for data transport and over the air transmission. Compared to cellphone tower's signals, paging signals are more suitable to penetrate buildings. Additionally, they implement the so-called simulcast technology to combine signals for better reception.
@@ -99,7 +100,7 @@ To explain this relation, we need to give a more fine-grained definition of an i
 
 \begin{figure}[htb]
   \begin{center}
-   \includegraphics{interruption_definition_small.PNG}
+   \scalebox{1.3}{\includegraphics{interruption_definition_small.PNG}}
   % \scalebox{.5}{\input{pager.jpg}}
   \end{center}
     \caption{\label{interruptions_fig}  Categorising interruptions based on the source and nature of the interruption. \cite[]{Fetter2018}}
