Finalised paper for upload

--- a/CML_Seminar_Template.bib
+++ b/CML_Seminar_Template.bib
@@ -1,5 +1,5 @@
 @article{heponiemi2014call,
-  title={On-call work and physicians’ well-being: testing the potential mediators},
+  title={On-call work and physicians well-being: testing the potential mediators},
   author={Heponiemi, T and Puttonen, S and Elovainio, M},
   journal={Occupational Medicine},
   volume={64},
@@ -7,6 +7,32 @@
   pages={352--357},
   year={2014},
   publisher={Oxford University Press UK}
+}
+
+@article{ernst1999work,
+  title={Work-family role synthesis: Individual and organizational determinants},
+  author={Ernst Kossek, Ellen and Noe, Raymond A and DeMarr, Beverly J},
+  journal={International Journal of Conflict Management},
+  volume={10},
+  number={2},
+  pages={102--129},
+  year={1999},
+  publisher={MCB UP Ltd}
+}
+
+@book{katz1978social,
+  title={The social psychology of organizations},
+  author={Katz, Daniel and Kahn, Robert L},
+  volume={2},
+  year={1978},
+  publisher={Wiley New York}
+}
+
+@book{boucher1992paging,
+  title={The paging technology handbook},
+  author={Boucher, Neil J},
+  year={1992},
+  publisher={John Wiley \& Sons}
 }
 
 @inproceedings{Fetter2018,
