--- a/CML_Seminar_Template.tex
+++ b/CML_Seminar_Template.tex
@@ -5,23 +5,27 @@
 \maketitle{Interruptions in HCI and Boundary Management}{\ }
 
 \author{Andreas Rayzik}
-       {Matrikelnummer 1891837}
+       {1891837}
        {andreas.rayzik@stud.uni-bamberg.de}
 
 \begin{abstract}
-Short abstract, max. 200 words  (Helvetica 10; height 13 Pt; 24 Pt above and below paragraph, centred). Abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract, abstract. 
+This work will present the case study of the on-call work domain for interruptions and boundary management. The general effects on a person's health will be outlined. The interesting properties of the boundary will be explained. Afterwards, the pager as the key device in the on-call domain will be described. We will discuss how it enables availability and how this relates to a specific subset of interruptions. Finally, we will look at how high availability in the on-call work domain could be balanced with high explicit availability in the life domain. The bias of unavailability signalling will be explained as well.
 \end{abstract}
 
 \vspace{24pt}
 
-\section{Introduction}
+\section{Introduction to the on-call work case study of interruptions in boundary management}
 
-Job areas with on-call service mark a very interesting example of a boundary in which the consequences for unwanted transitions are especially high. The influences of constant interruptibility on mental and cognitive state become obvious. A questionnaire in 2006 and 2010 among Finnish physicians found that sleeping problems and WIF (work interference with family) lead to high distress, low job satisfaction and low work ability. The number of active on-call hours is associated with higher levels of WIF, but not with sleeping problems.
+Job areas with on-call service mark a very interesting example of a boundary in which the consequences for unwanted transitions are especially high. The influences of constant interruptibility on mental and cognitive state become obvious. In the following sections, this will be explained by a questionnaire in 2006 and 2010 among Finnish physicians, which found that sleeping problems and WIF (work interference with family) lead to high distress, low job satisfaction and low work ability. The number of active on-call hours was found to be associated with higher levels of WIF, but not with sleeping problems.
+Another study lists symptoms for mental, cognitive and behavioural effects. A selection of symptoms will be portrayed. The kind of symptoms and their substantial prevalence among workers in on-call service shows the severity of the effects.
 \par
-Another study lists symptoms for mental, cognitive and behavioural effects. Table 1 shows a selection of symptoms. The kind of symptoms and their substantial prevalence among workers in on-call service shows the severity of the effects.
+Afterwards, the case study will focus on the interesting boundary attributes of the on-call work domain. These will be discussed in a greater context of preceding literature in the field of boundary management. We will see how boundary flexibility and boundary permeability are combined for the definition of boundary thickness.
+\par
+Subsequently, the case study will explain the pager as the key device being utilised in the domain. It will be explained how the paging technology enables high availability and how this leads to a prevalence of the technology-mediated subset of interruptions. This brings us the question of how the high availability in the on-call work domain could be balanced with high explicit availability in the life domain. This issue will be further illustrated by discussing the bias of unavailability signalling.
 
 \section{The domain of on-call service}
-Figure \ref{Boundary_sketch_fig} shows a rough sketch depicting a worker in the domain of on-call service, symbolised by the doctor's bag. The pressure and responsibility he experiences from his social environment is depicted by the arrows pointing towards his domain's boundary. The right side shows a different subject with a thinner boundary in comparison. The thinner boundary enables transitions to other domains more easily.
+Figure \ref{Boundary_sketch_fig} shows a rough sketch depicting a worker in the domain of on-call service, symbolised by the doctor's bag. The pressure and responsibility he experiences from his social environment is depicted by the arrows pointing towards his domain's boundary. This is an important aspect of the role the person takes in the domain. In \cite[]{katz1978social}, the role is defined as "The building block of social systems and the summation of the requirements with which such systems confront their members as individuals". The "building blocks" formulation stresses the complexity in social environments in which the feelings of responsibility can take shape. 
+The right side shows a different subject with a thinner boundary in comparison. The thinner boundary enables transitions to other domains more easily.
 \begin{figure}[htb]
   \begin{center}
    \scalebox{1}{\includegraphics{Boundary_sketch_small.PNG}}
@@ -31,9 +35,27 @@ Figure \ref{Boundary_sketch_fig} shows a rough sketch depicting a worker in the 
 \end{figure}
 
 \subsection{Effects on health}
-In a 2014 study by Heponiemi et al. \cite[]{heponiemi2014call}, the relations between sleeping problems, WIF (work interference with family) and distress as well as job satisfaction was researched. The study was designed carefully to distinguish between cause and correlation. Questionnaires from 20016 and 2010 among physicians in Finland were analysed. There were 1541 respondents. The study found that if the on-call work was causing high distress, WIF and sleeping problems acted as a mechanism.
+In a 2014 study by Heponiemi et al. \cite[]{heponiemi2014call}, the relations between sleeping problems, WIF (work interference with family) and distress as well as job satisfaction was researched. The study was designed carefully to distinguish between cause and correlation. Questionnaires from 20016 and 2010 among physicians in Finland were analysed. The goal was to observe the long-term effects of four years of on-call work. There were 1541 respondents. Since the demographic distribution and the specific employment sector is relevant for the context of this study, the table shown in figure \ref{study_sample} is taken from the paper to provide an overview. The study found that if the on-call work was causing high distress, WIF and sleeping problems acted as a mechanism. Figure \ref{wif_sleeping_problems} visualises the relationships between the factors. It can be seen that the direct effect of on-call work on distress, job satisfaction and work ability (Arrow c' in the figure) was explored as well.
+
+\begin{figure}[htb]
+  \begin{center}
+   \scalebox{0.6}{\includegraphics{wif_sleeping_problems.PNG}}
+  % \scalebox{.5}{\input{pager.jpg}}
+  \end{center}
+    \caption{\label{wif_sleeping_problems}  The framework of the study. \cite[]{heponiemi2014call}}
+\end{figure}
+
+\begin{figure}[htb]
+  \begin{center}
+   \scalebox{0.6}{\includegraphics{study_sample.PNG}}
+  % \scalebox{.5}{\input{pager.jpg}}
+  \end{center}
+    \caption{\label{study_sample}  Characteristics of the study sample. \cite[]{heponiemi2014call}}
+\end{figure}
+
 \par
 In a 2006 study in Finland \cite[]{Lindfors2006}, researchers looked deeply into on-call stress and the effects among anaesthetists. Anaesthesia is a state of temporary induced loss of awareness or sensation. An anaesthetists is a physician trained in this field of medicine. In the questionnaire, an abundance of symptoms was asked about. A selection of a few of these symptoms was collected (cf. Table ~\ref{CML_Seminar_Template_tab1}). Reports of the symptom were compared between workers being currently on-call service or the day after and those on vacation for at least two weeks. It can be seen that for the selected symptoms, the report rates for on-call service are significantly higher. This is representative for the entirety of symptoms that was evaluated in the questionnaire. The symptoms involve mental, cognitive and behavioural kinds. The type of symptoms illustrate how severe the effects of on-call service are.
+
 
 
 \begin{table}
@@ -75,6 +97,7 @@ Boundary thickness is defined by \cite[]{Ashforth2000} as the combination of bou
 % References in the text should have the format [Author Year]. Sources with one author should be referenced as \cite[]{Gro1995}; sources with two authors like this \cite[]{MaVa1984}, and sources with more than two authors like this \cite[]{Ham2002}; if you have the page numbers, indicate them like this \cite[p. 16]{Gro1995} or this for a range \cite[pp. 16-17]{Gro1995}. 
 
 \section{How paging technology enables high availability}
+The central device and technology used in the domain of on-call work is the pager. The paging technology has been in use in hospitals since at least the early 1980s and has since been documented and discussed extensively, for example throughout ~\cite{boucher1992paging}. In the context of computer science, it is not to be confused with the memory management concept in operating systems with the same name.
 Pagers are small devices that are designed to be dedicated to the one task of delivering text messages quickly and reliably. These messages are supposed to be short, concise and critical for the case of emergencies. Pagers are being used by hospitals, the police, energy distribution system operators and firefighters, to name some of the most important examples. Figure \ref{pager_fig1} shows an example of such a device. The interface elements on the front are very simple, with three arrow buttons for navigation and a power-on button. The display is a four-line alphanumeric monochrome display. The LCD has a back-light with adjustable contrast. It only displays the current date and time, and a message.
 \par
 Compared to a smartphone, the design is so much simpler and more efficient that the battery can be expected to last weeks instead of one or two days. The low-power CPU and the low-resolution monochrome display are the largest contributors to this feature. This is important in the case of a disaster, when there might be a power blackout and it is not possible to find a power outlet to charge a cellphone. The case of the device is sturdy and robust, so it can still function after being dropped from a moderate height. All of this contributes to a low-maintenance device, which on top of that can be quickly and inexpensively exchanged if it still gets lost or broken.
@@ -82,7 +105,7 @@ Compared to a smartphone, the design is so much simpler and more efficient that 
 % TODO scale
 \begin{figure}[htb]
   \begin{center}
-   \scalebox{1.8}{\includegraphics{pager_small.jpg}}
+   \scalebox{0.15}{\includegraphics{pager.jpg}}
   % \scalebox{.5}{\input{pager.jpg}}
   \end{center}
     \caption{\label{pager_fig1} An example of a paging device. From https://www.visiplex.com/product/alphanumeric-pager/ (Accessed 10/7/18).}
@@ -100,7 +123,7 @@ To explain this relation, we need to give a more fine-grained definition of an i
 
 \begin{figure}[htb]
   \begin{center}
-   \scalebox{1.3}{\includegraphics{interruption_definition_small.PNG}}
+   \scalebox{0.5}{\includegraphics{interruption_definition.PNG}}
   % \scalebox{.5}{\input{pager.jpg}}
   \end{center}
     \caption{\label{interruptions_fig}  Categorising interruptions based on the source and nature of the interruption. \cite[]{Fetter2018}}
@@ -114,7 +137,8 @@ In the definitions, both the source and the nature of the interruption are being
 \end{itemize}
 
 \subsection{Signalling availability in Life Domain after long periods of unavailability}
-To avoid confusion, it has to be pointed out that in the previous sections, availability described the state of being able to receive interruptions in the work domain. Now, we would like to refer to being available in the life domain instead. After a long on-call working shift with maximum unavailability to the life domain, a worker might wish to balance this period with being highly available in the period afterwards. As has been discussed, the unavailability during the working hours contributes to a considerable amount of stress, that is expressed in an abundance of symptoms. A balance could help alleviate these symptoms. To take full advantage of his availability in the life domain, a worker needs to signal this state to his social environment. The signal needs to inform not only about the state of being technically reachable but the state of explicit availability. This way, communications can be initiated from both sides instead of originating from the worker only.
+To avoid confusion, it has to be pointed out that in the previous sections, availability described the state of being able to receive interruptions in the work domain. Now, we would like to refer to being available in the life domain instead. After a long on-call working shift with maximum unavailability to the life domain, a worker might wish to balance this period with being highly available in the period afterwards. As has been discussed, the unavailability during the working hours contributes to a considerable amount of stress, that is expressed in an abundance of symptoms. A balance could help alleviate these symptoms. To take full advantage of his availability in the life domain, a worker needs to signal this state to his social environment. The signal needs to inform not only about the state of being technically reachable but the state of explicit availability. This way, communications can be initiated from both sides instead of originating from the worker only. This could be summarised as a boundary management strategy, defined in \cite[]{ernst1999work} as "The principles one uses to organize and separate role demands and expectations".
+
 \par
 As \cite[]{Fetter2018} explain, this can impose a challenge since there is a bias of signalling unavailability instead of availability in devices and software. Examples for this in smartphones are a Do-not-disturb mode or the Airplane mode, which is often being used for the same purpose. In text communication, there are typically the features of blocking another user, muting a contact's chat or a group chat, as well as disabling read confirmations. The latter one is being used to lessen the pressure of being expected to answer soon after a message was confirmed to the sender as being read. In devices, the bias becomes most obvious when evaluating sensor development and related signal processing. Examples for this are using the microphone sensor to capture voice activity or analysing the data of an accelerometer sensor the determine the activity of running. Captured voice activity might be interpreted as holding a conversation with another person. Both states, conversation and running, would reasonably be used to signal unavailability. Sometimes, this is motivated by trying to design a smartphone software feature to save battery life. In the state of unavailability, it is acceptable for the device to poll for incoming messages less frequently, which saves battery life by using the communications (e.g. WiFi) interface less and drawing less power for radio signal sending.
 
@@ -128,6 +152,8 @@ undesired visitors requested to meet their boss, the butlers would tell them tha
 	\item Giving multiple options: In this strategy, the message sender was explaining that he was not yet sure whether to attend one of multiple events or go to one of several places. Leaving the possibility of a meeting open, the sender had actually already decided for himself against a meeting with the other person.
 \end{itemize}
 
+\section{Conclusion}
+In conclusion, we can state that the domain of on-call work exhibits a boundary with interesting properties. We can say that it illustrates an extreme case of boundary attributes. These are connected to high levels of distress which cause a variety of severe mental, cognitive and behavioural symptoms. The key device used in the on-call work domain is the pager. Paging technology stands in stark contrast to smartphone technology. Pagers make the compromise of providing maximum availability and therefore maximum reliability by sacrificing flexibility and complex features for the user. In the context of interruptions, we explained how pagers minimize technology-initiated interruptions. The high degree of availability in the on-call work domain should be balanced with high explicit availability in the life domain. It was discussed how this is difficult for users because of a bias of signalling unavailability instead of explicit availability. This bias can be found in device design as well as in software design.
 
 %\subsection*{Books:} 
 %
